src/snapshots/afrotd__parser__tests__interpreation_html_10.1.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A puntet und bewegt sich beim Snap illegal. Der unberührte
            Ball geht zwischen den Goallines ins Aus, wonach Team B ein
            persönliches Foul verursacht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Mögliche Optionen: (1) Team B kann wählen, dass der Down
                wiederholt wird und Team A wird mit einer 5-Meterstrafe vom
                Previous Spot bestraft, gefolgt von einer 15Meterstrafe gegen
                Team B, die einen automatischen First Down enthält. (2) Team B
                kann die Bestrafung der illegalen Bewegung ablehnen und den
                Ball nach einer 15-Meterstrafe vom Dead Ball Spot mit einem
                First Down und 10 selbst ins Spiel bringen. (3) Team B kann die
                5Meterstrafe vom Dead Ball Spot (Regel 6.3.13) annehmen,
                gefolgt von einer 15-Meterstrafe vom Succeeding Spot gegen Team
                B und bringt den Ball mit einem First Down und 10 selbst ins
                Spiel. In allen Fällen startet die Game Clock mit dem Snap
                (Regel 3.3.2.d.8).
            </p>
        </details>
    </div>
</article>
