src/snapshots/afrotd__parser__tests__interpreation_html_10.1.6_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.6.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B ist Offside bei einem Down von der B-3 (kein Try) und Team A
            wirft einen legalen Vorwärtspass in Team B’s Endzone. Team B fängt
            den Pass ab und läuft 101 Meter in Team A’s Endzone, wonach Team A
            clippt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wiederhole den Down, wobei Team A den Ball an der B-16,5 ins
                Spiel bringt.
            </p>
        </details>
    </div>
</article>
