src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B fängt einen legalen Vorwärtspass ab und der Spieler, der den
            Pass warf, wird während des Zurücktragens gefoult.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball, First Down und 10 nach der Strafdurchführung
                (Regeln 2.27.5, 5.2.4 und 9.1).
            </p>
        </details>
    </div>
</article>
