src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_16.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.XVI
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem Safety puntet Team A von der A-20. Der Ball geht
            unberührt von Team B ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B hat die Wahl, dass Team A noch einmal von der A-15 kickt
                oder selbst an der 50Meterlinie oder fünf Meter jenseits des
                Inbounds Spot den Ball ins Spiel zu bringen.
            </p>
        </details>
    </div>
</article>
