src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Team A-Fumble oder ein Rückpass ist in Team A’s Endzone frei,
            wo A33 den Ball illegal schlägt oder kickt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – Safety (Regel 8.5.1.b).
            </p>
        </details>
    </div>
</article>
