src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s unberührter Punt aus der eigenen Endzone heraus geht an
            der A-40 ins Aus. A2 clippt B2 in seiner Endzone, bevor der Ball
            gekickt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – Safety (Regel 9.1 Strafe) oder Team B kann den Ball an
                der A-25 nach der Strafdurchführung von dem Punkt, an dem der
                Ball ins Aus ging, snappen.
            </p>
        </details>
    </div>
</article>
