src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A snappt an der A-1, Ballträger A2 advanct und wird an der A-5
            zu Boden gebracht. Team B verursacht ein persönliches Foul in der
            Endzone, während der Ball im Spiel ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Basic Spot (A-5).
            </p>
        </details>
    </div>
</article>
