src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            A1 befindet sich auf seiner 40 und puntet von hinter der neutralen
            Zone. B1 hält A2 hinter oder jenseits der neutralen Zone fest,
            nachdem der Kick die neutrale Zone überquert hat und bevor er Team
            B berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe - 10 Meter vom Ende des Kicks. Die Strafdurchführung
                unterliegt dem Postscrimmage Kick Prinzip, wenn Team B als
                nächstes den Ball snappt.
            </p>
        </details>
    </div>
</article>
