src/snapshots/afrotd__parser__tests__interpreation_html_10.2.2_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Während A1 advanct, foult B25 10 Meter jenseits der neutralen Zone.
            Nachdem A1 30 Meter advanct ist, fumbelt er und der Ball wird von
            B48 recovert, der den Ball über Team A’s Goalline advanct.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Bestrafe Team B vom Basic Spot, welcher der Punkt des Fumbles
                ist. Team A bleibt in Ballbesitz (Regel 5.2.3).
            </p>
        </details>
    </div>
</article>
